# velog-dashboard

./: .gitignore  README.md
.github/workflows/: worker.yml  worker_main.yaml  worker_token_refresh.yaml
backend/: .env.sample  app.js  logger.js  package.json  server.js
backend/src/middlewares/: auth.js  rateLimit.js
backend/src/middlewares/validator/: userValidator.js
backend/src/models/: postStats.js  userInfo.js
backend/src/routes/: postStatsRouter.js  userInfoRouter.js
backend/src/services/: postStatsServices.js  userInfoService.js  userInfoServices.js
docker/: docker-compose.yaml  docker-start.sh
mongodb/cnf/: mongod.conf
nginx/conf/: nginx.conf
nginx/conf.d/: velog-dashboard.conf
nginx/dummy/: temp-meta.html  temp-theme.html
nginx/pages/: 404.html  500.html  global.css  global.js  index.css  index.html  index.js
nginx/pages/dashboard/: index.css  index.html  index.js
nginx/pages/index/: index.css  index.html  index.js
worker/: .env.sample  logger.py  main.py  main_multi.py  pyproject.toml  token_refresh.py
worker/src/: db.py
worker/src/models/: __init__.py  poststats.py  userinfos.py
worker/src/modules/: velog_apis.py
